--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "chart.js": "^4.4.4",
     "framer-motion": "^6.5.1",
     "from-exponential": "^1.1.1",
+    "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-tradingview-widget": "^1.3.2",
     "recharts": "^2.13.0",
     "typescript": "^5.3.2",
     "viem": "^1.19.9",
